--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,11 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "chartjs": "^0.3.24",
+    "chartjs-react": "^3.4.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-loading": "^2.0.3",
