--- a/client/package.json
+++ b/client/package.json
@@ -19,12 +19,15 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-chartjs-2": "^4.0.1",
+    "react-datamaps-india": "^0.5.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^3.0.1",
+    "react-simple-maps": "^2.3.0",
     "react-slideshow-image": "^3.7.0",
+    "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
